  [Paolo Tormene]
  * Added to the engine server the possibility to log in and out
    programmatically by means of HTTP POST requests

  [Michele Simionato]
  * Optimized the computation of the event loss table
  * Introduced two new calculators ucerf_risk and ucerf_risk_fast
  * Optimized the memory consumption of the event based risk calculators
  * Extended the `oq show` command to work in a multi-user environment
  * Improved the test coverage of the exports in the WebUI
  * Removed the SourceManager: now the sources are filtered in the workers
    and we do not split in tiles anymore
  * Made the full datastore downloadable from the WebUI
  * Added a command "oq db" to send commands the engine database
    (for internal usage)
  * By default the WebUI now displays only the last 100 calculations
  * Added more validity checks to the disaggregation parameters; split the
    sources even in the disaggregation phase
  * Added an optimized event based calculator computing the total losses by
    taxonomy and nothing else
  * Filtered the sources up front when there are few sites (<= 10)
  * Reduced the number of tasks generated when filter_sources is False
  * Saved engine_version and hazardlib_version as attributes of the datastore
  * Avoided saving the ruptures when ground_motion_fields is True
  * Finalized the HDF5 export for hazard curves, hazard maps and uniform
    hazard spectra
  * Restored a weight of 1 for each rupture in the event based calculator
  * Removed the MultiHazardCurveXMLWriter
  * Improved the saving of the ruptures in event based calculations
  * Reduced the data transfer due to the `rlzs_by_gsim` parameter
  * Added an HDF5 export for scenario GMFs
  * If `filter_sources` if false, the light sources are not filtered, but the
    heavy sources are always filtered
  * Now the dbserver can be stopped correctly with CTRL-C
  * Parallelized the splitting of heavy sources